Update Scenes “2017-11-21-test-scene-2”

--- a/src/_scenes/2017-11-21-test-scene-2.md
+++ b/src/_scenes/2017-11-21-test-scene-2.md
@@ -3,3 +3,9 @@ title: Test Scene 2
 date: 2017-11-21T09:08:51.646Z
 ---
 sdfasdfmkals;dfmklxdnbfjkdxfg
+
+**test bold markdown**
+
+_test italic mardown_
+
+_**test bold + italic mardown**_
